# bert

./: Cargo.toml  justfile
bert/bot/: Cargo.toml
bert/bot/src/: loader.rs  main.rs
bert/core/: Cargo.toml
bert/core/src/: lib.rs
bert/tui/: Cargo.toml
bert/tui/src/: lib.rs
modules/base/: Cargo.toml  readme.md
modules/base/src/: lib.rs  ping.rs
