[workspace]
resolver = "3"
members = ["bert/bot", "bert/core", "modules/base"]
default-members = ["bert/bot"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2024"

[workspace.dependencies]
bert = { path = "bert/core", package = "bert-core" }
libloading = "0.8.8"
thiserror = "2.0.12"
